--- a/EcommerceProject/test-output/old/Suite/methods.html
+++ b/EcommerceProject/test-output/old/Suite/methods.html
@@ -1,30 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="afa19b">  <td>23/10/27 14:55:16</td>   <td>0</td> <td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.EcommerceProject.TestCases.IndexPageTest@693fe6c9]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@586127428</td>   <td></td> </tr>
-<tr bgcolor="60f79e">  <td>23/10/27 14:55:17</td>   <td>671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexPageTest.setup(java.lang.String)[pri:0, instance:com.EcommerceProject.TestCases.IndexPageTest@693fe6c9]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@44788215</td>   <td></td> </tr>
-<tr bgcolor="60f79e">  <td>23/10/27 14:55:29</td>   <td>12514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.login(java.lang.String, java.lang.String)[pri:0, instance:com.EcommerceProject.TestCases.IndexPageTest@693fe6c9]">login</td> 
-  <td>TestNG-tests-1@44788215</td>   <td></td> </tr>
-<tr bgcolor="60f79e">  <td>23/10/27 14:55:29</td>   <td>12884</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IndexPageTest.tearDown()[pri:0, instance:com.EcommerceProject.TestCases.IndexPageTest@693fe6c9]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@44788215</td>   <td></td> </tr>
-<tr bgcolor="60f79e">  <td>23/10/27 14:55:31</td>   <td>14716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexPageTest.setup(java.lang.String)[pri:0, instance:com.EcommerceProject.TestCases.IndexPageTest@693fe6c9]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@44788215</td>   <td></td> </tr>
-<tr bgcolor="60f79e">  <td>23/10/27 14:55:41</td>   <td>25236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.login(java.lang.String, java.lang.String)[pri:0, instance:com.EcommerceProject.TestCases.IndexPageTest@693fe6c9]">login</td> 
-  <td>TestNG-tests-1@44788215</td>   <td></td> </tr>
-<tr bgcolor="60f79e">  <td>23/10/27 14:55:42</td>   <td>25546</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IndexPageTest.tearDown()[pri:0, instance:com.EcommerceProject.TestCases.IndexPageTest@693fe6c9]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@44788215</td>   <td></td> </tr>
-<tr bgcolor="60f79e">  <td>23/10/27 14:55:43</td>   <td>26833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexPageTest.setup(java.lang.String)[pri:0, instance:com.EcommerceProject.TestCases.IndexPageTest@693fe6c9]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@44788215</td>   <td></td> </tr>
-<tr bgcolor="60f79e">  <td>23/10/27 14:55:54</td>   <td>37526</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.verifyLogo()[pri:0, instance:com.EcommerceProject.TestCases.IndexPageTest@693fe6c9]">verifyLogo</td> 
-  <td>TestNG-tests-1@44788215</td>   <td></td> </tr>
-<tr bgcolor="60f79e">  <td>23/10/27 14:55:54</td>   <td>37583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IndexPageTest.tearDown()[pri:0, instance:com.EcommerceProject.TestCases.IndexPageTest@693fe6c9]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@44788215</td>   <td></td> </tr>
-<tr bgcolor="7787a5">  <td>23/10/27 14:55:55</td>   <td>38746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PIMtest.setup(java.lang.String)[pri:0, instance:com.EcommerceProject.TestCases.PIMtest@34f5090e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@44788215</td>   <td></td> </tr>
-<tr bgcolor="7787a5">  <td>23/10/27 14:56:06</td>   <td>49844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PIMtest.addEmployee()[pri:0, instance:com.EcommerceProject.TestCases.PIMtest@34f5090e]">addEmployee</td> 
-  <td>TestNG-tests-1@44788215</td>   <td></td> </tr>
-<tr bgcolor="afa19b">  <td>23/10/27 15:19:58</td>   <td>1482114</td> <td title="&lt;&lt;BaseClass.afterSuite()[pri:0, instance:com.EcommerceProject.TestCases.IndexPageTest@693fe6c9]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@586127428</td>   <td></td> </tr>
+<tr bgcolor="afa19b">  <td>23/11/09 10:06:18</td>   <td>0</td> <td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.EcommerceProject.TestCases.ClaimTest@51dcb805]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1409154977</td>   <td></td> </tr>
+<tr bgcolor="7caca8">  <td>23/11/09 10:06:19</td>   <td>716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ClaimTest.setup(java.lang.String)[pri:0, instance:com.EcommerceProject.TestCases.ClaimTest@51dcb805]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@883899344</td>   <td></td> </tr>
+<tr bgcolor="7caca8">  <td>23/11/09 10:06:31</td>   <td>12925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClaimTest.assignClaim(java.lang.String, java.lang.String)[pri:0, instance:com.EcommerceProject.TestCases.ClaimTest@51dcb805]">assignClaim</td> 
+  <td>TestNG-tests-1@883899344</td>   <td></td> </tr>
+<tr bgcolor="7caca8">  <td>23/11/09 10:06:57</td>   <td>39382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ClaimTest.tearDown()[pri:0, instance:com.EcommerceProject.TestCases.ClaimTest@51dcb805]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@883899344</td>   <td></td> </tr>
+<tr bgcolor="afa19b">  <td>23/11/09 10:06:58</td>   <td>40463</td> <td title="&lt;&lt;BaseClass.afterSuite()[pri:0, instance:com.EcommerceProject.TestCases.ClaimTest@51dcb805]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1409154977</td>   <td></td> </tr>
 </table>
