--- a/EcommerceProject/test-output/old/Suite/groups.html
+++ b/EcommerceProject/test-output/old/Suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>smoke</td><td>IndexPageTest.verifyLogo()[pri:0, instance:com.EcommerceProject.TestCases.IndexPageTest@693fe6c9]<br/>IndexPageTest.login(java.lang.String, java.lang.String)[pri:0, instance:com.EcommerceProject.TestCases.IndexPageTest@693fe6c9]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>smoke</td><td>ClaimTest.assignClaim(java.lang.String, java.lang.String)[pri:0, instance:com.EcommerceProject.TestCases.ClaimTest@51dcb805]<br/></td></tr>
 </table>
